@@ -132,6 +132,7 @@ public abstract class ElasticsearchTestBasePlugin implements Plugin<Project> {
                 "--add-opens=java.base/java.time=ALL-UNNAMED",
                 "--add-opens=java.management/java.lang.management=ALL-UNNAMED",
                 "--enable-native-access=ALL-UNNAMED",
+                "--add-modules=jdk.incubator.vector",
                 "-XX:+HeapDumpOnOutOfMemoryError"
             );
 
@@ -143,6 +144,8 @@ public abstract class ElasticsearchTestBasePlugin implements Plugin<Project> {
                     return List.of();
                 }
             });
+            test.getJvmArgumentProviders()
+                .add(() -> List.of("-Dorg.apache.lucene.vectorization.upperJavaFeatureVersion=" + test.getJavaVersion().getMajorVersion()));
 
             String argline = System.getProperty("tests.jvm.argline");
             if (argline != null) {
